- Fixed bug #26462 (phpize + ext/bcmath -> compile error)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@145129 c90b9560-bf6c-de11-be94-00142212c4b1