ext/bcmath/libbcmath/src/bcmath.h
@@ -53,8 +53,7 @@ typedef struct bc_struct
     } bc_struct;
 
 #include "php.h"
-#include "ext/bcmath/php_bcmath.h"
-
+#include "../../php_bcmath.h"
 
 /* The base used in storing the numbers in n_value above.
    Currently this MUST be 10. */
